--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400&display=swap" rel="stylesheet">
 
   <style>
-    :root {
-      --primary-color: #800000;
+:root {
+  --primary-color: #800000; /* زرشکی استاندارد */
+}
       --font-family: 'Vazirmatn', sans-serif;
       --background-color: #fff0f0;
       --text-color: #2d004d;
@@ -156,7 +157,7 @@
 <body>
   <div class="container">
     <div class="logo-section">
-      <img src="https://USERNAME.github.io/REPO/logo.png" alt="لوگوی شرکت">
+      <img src="Meeting/logo.png" alt="لوگوی شرکت">
     </div>
 
     <div class="header-section">
