--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400&display=swap" rel="stylesheet">
 
   <style>
-:root {
-  --primary-color: #800000; /* زرشکی استاندارد */
-}
+    :root {
+      --primary-color: #800000; /* زرشکی */
       --font-family: 'Vazirmatn', sans-serif;
       --background-color: #fff0f0;
       --text-color: #2d004d;
