--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     }
 
     .info-row input,
-    .info-row select {
+    .info-row select,
+    .info-row select option {
       flex: 1;
-      padding: 6px;
+      padding: 8px;
       border: 2px solid var(--primary-color);
       border-radius: var(--border-radius);
       font-size: var(--font-size);
@@ -117,29 +118,33 @@
     }
 
     .attendees-list {
-      flex: 1;
+      flex: 0 0 25%;
       border: 2px solid var(--primary-color);
       border-radius: var(--border-radius);
       font-size: var(--font-size);
-      padding: 6px;
-      height: 100px;
-      overflow-y: auto;
+      padding: 8px;
       line-height: 1.2;
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
+      max-height: 48px;
     }
 
-    .attendees-list label {
-      display: flex;
-      align-items: center;
-      gap: 4px;
+    .attendees-list option {
+      font-size: var(--font-size);
+      line-height: 1.2;
     }
 
-    .attendees-input, .primary-btn {
-      flex: 2;
-      padding: 6px;
+    .attendees-input {
+      flex: 1;
+      padding: 8px;
       border: 2px solid var(--primary-color);
+      border-radius: var(--border-radius);
+      font-size: var(--font-size);
+      line-height: 1.2;
+    }
+
+    .attendees-section .primary-btn {
+      flex: 1;
+      padding: 8px;
+      border: none;
       border-radius: var(--border-radius);
       font-size: var(--font-size);
       line-height: 1.2;
@@ -160,7 +165,7 @@
 
     .entry-details input {
       flex: 1;
-      padding: 6px;
+      padding: 8px;
       border: 2px solid var(--primary-color);
       border-radius: var(--border-radius);
       font-size: var(--font-size);
@@ -180,7 +185,7 @@
       border: none;
       border-radius: var(--border-radius);
       cursor: pointer;
-      padding: 6px 12px;
+      padding: 8px 12px;
       font-size: var(--font-size);
       transition: background-color 0.3s;
       line-height: 1.2;
@@ -232,11 +237,12 @@
       .info-print {
         border: 2px solid var(--primary-color);
         border-radius: var(--border-radius);
-        padding: 6px;
+        padding: 8px;
         margin: 0;
         text-align: center;
         background-color: rgba(123, 63, 228, 0.1);
         flex: 1;
+        min-width: 100px;
         font-size: var(--font-size);
         line-height: 1.2;
       }
@@ -289,17 +295,17 @@
       <textarea id="topic" class="topic-section" placeholder="🔹 موضوع جلسه" required></textarea>
 
       <div class="attendees-section">
-        <div id="attendeesList" class="attendees-list">
-          <label><input type="checkbox" value="محمد جواد اسماعیلی">محمد جواد اسماعیلی</label>
-          <label><input type="checkbox" value="علیرضا اسماعیلی">علیرضا اسماعیلی</label>
-          <label><input type="checkbox" value="علیرضا کیایی">علیرضا کیایی</label>
-          <label><input type="checkbox" value="علی سلیمی">علی سلیمی</label>
-          <label><input type="checkbox" value="کاظم کاظمی">کاظم کاظمی</label>
-          <label><input type="checkbox" value="رضا خانی">رضا خانی</label>
-          <label><input type="checkbox" value="آقای اخباریه">آقای اخباریه</label>
-          <label><input type="checkbox" value="محمدرضا صالحی">محمدرضا صالحی</label>
-          <label><input type="checkbox" value="محمد صباغی">محمد صباغی</label>
-        </div>
+        <select id="attendeesList" class="attendees-list" multiple>
+          <option value="محمد جواد اسماعیلی">محمد جواد اسماعیلی</option>
+          <option value="علیرضا اسماعیلی">علیرضا اسماعیلی</option>
+          <option value="علیرضا کیایی">علیرضا کیایی</option>
+          <option value="علی سلیمی">علی سلیمی</option>
+          <option value="کاظم کاظمی">کاظم کاظمی</option>
+          <option value="رضا خانی">رضا خانی</option>
+          <option value="آقای اخباریه">آقای اخباریه</option>
+          <option value="محمدرضا صالحی">محمدرضا صالحی</option>
+          <option value="محمد صباغی">محمد صباغی</option>
+        </select>
         <input type="text" id="newAttendee" class="attendees-input" placeholder="➕ افزودن نام جدید">
         <button type="button" class="primary-btn" onclick="addAttendee()">افزودن</button>
       </div>
@@ -351,8 +357,12 @@
     }
 
     function setCurrentDateTime() {
-      resetDate();
-      resetTime();
+      try {
+        resetDate();
+        resetTime();
+      } catch (e) {
+        console.error('Error in setCurrentDateTime:', e);
+      }
     }
 
     function addEntry() {
@@ -388,11 +398,11 @@
       try {
         var newName = document.getElementById("newAttendee").value.trim();
         if (newName) {
-          var label = document.createElement("label");
-          label.innerHTML = `<input type="checkbox" value="${newName}">${newName}`;
-          document.getElementById("attendeesList").appendChild(label);
+          var option = document.createElement("option");
+          option.text = newName;
+          option.value = newName;
+          document.getElementById("attendeesList").add(option);
           document.getElementById("newAttendee").value = "";
-          label.querySelector('input').addEventListener('change', updateSelectedAttendees);
           updateSelectedAttendees();
         }
       } catch (e) {
@@ -400,17 +410,19 @@
       }
     }
 
+    document.getElementById("attendeesList").addEventListener("change", updateSelectedAttendees);
+
     function updateSelectedAttendees() {
       try {
         console.log('updateSelectedAttendees called');
-        var checkboxes = document.querySelectorAll('#attendeesList input[type="checkbox"]');
+        var selectedList = document.getElementById("attendeesList");
         var selectedAttendees = document.getElementById("selectedAttendeeList");
         var names = [];
-        checkboxes.forEach(function(checkbox) {
-          if (checkbox.checked) {
-            names.push(checkbox.value);
+        for (var i = 0; i < selectedList.options.length; i++) {
+          if (selectedList.options[i].selected) {
+            names.push(selectedList.options[i].value);
           }
-        });
+        }
         selectedAttendees.textContent = names.join(', ');
       } catch (e) {
         console.error('Error in updateSelectedAttendees:', e);
@@ -421,9 +433,17 @@
       try {
         const location = document.getElementById("meetingLocation").value;
         const printLocationDiv = document.getElementById("printMeetingLocationField");
-        printLocationDiv.textContent = location ? "📍 مکان جلسه: " + location : "";
+        printLocationDiv.textContent = location || "";
       } catch (e) {
         console.error('Error in updatePrintLocation:', e);
+      }
+    }
+
+    function sharePage() {
+      try {
+        alert('این صفحه به اشتراک گذاشته شد!');
+      } catch (e) {
+        console.error('Error in sharePage:', e);
       }
     }
 
@@ -447,9 +467,6 @@
         setCurrentDateTime();
         updatePrintLocation();
         document.getElementById("meetingLocation").addEventListener("change", updatePrintLocation);
-        document.querySelectorAll('#attendeesList input[type="checkbox"]').forEach(function(checkbox) {
-          checkbox.addEventListener('change', updateSelectedAttendees);
-        });
       } catch (e) {
         console.error('Error in window.onload:', e);
       }
